--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -7,9 +7,11 @@
 @import url('./reset.css');
 @import url('./vite-promo.css');
 @import url('./header.css');
+@import Url('./1-timer.css');
+@import Url('./2-snackbar.css');
 
 :root {
-  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
+  font-family: Inter, Avenir, Helvetica, Arial, Montserrat sans-serif;
   font-size: 16px;
   line-height: 24px;
   font-weight: 400;
